calculation api
